--- a/src/Makefile
+++ b/src/Makefile
@@ -7,13 +7,13 @@ GTK_LIBS = $(shell pkg-config --libs $(GTK) gmodule-2.0 gio-unix-2.0)
 
 # If you change the versions and checksums, make sure to also update io.howl.Editor.yaml.
 
-LUAJIT_VER = LuaJIT-2.1.0-beta3
-LUAJIT_CHECKSUM = 1ad2e34b111c802f9d0cdf019e986909123237a28c746b21295b63c9e785d9c3
+LUAJIT_VER = luajit-2.1-2025-04-09
+LUAJIT_CHECKSUM = 315e503d714832dfd0fd29a4c2ebaf666b2e63d58e65b7575be1d38121d75dd5
 LUAJIT = deps/${LUAJIT_VER}
 LUAJIT_SRC_DIR = $(realpath $(LUAJIT)/src)
 LUAJIT_CFLAGS = -I$(LUAJIT_SRC_DIR)
 LUAJIT_ARCHIVE = $(LUAJIT)/src/libluajit.a
-LUAJIT_URL = http://luajit.org/download/$(LUAJIT_VER).tar.gz
+LUAJIT_URL = https://download.howl.io/luajit/$(LUAJIT_VER).tar.gz
 
 LPEG_VER = lpeg-0.10.2
 LPEG_CHECKSUM = d1a7698e4bcd0ac305633774062d22b27300a41673c3d733ea9993244a64ea6f
